--- a/GoTracker/app/src/main/res/layout/fragment_start.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_start.xml
@@ -81,11 +81,10 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="45dp"
                     android:src="@drawable/error"
                     android:id="@+id/imageView"
-                    android:layout_weight="1" />
+                    android:layout_width="75dp" />
 
                 <TextView
                     android:text="TextView"
@@ -102,11 +101,10 @@
                 android:layout_weight="0.04">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:src="@drawable/success"
                     android:id="@+id/imageView2"
-                    android:layout_weight="1" />
+                    android:layout_width="75dp"
+                    android:layout_height="45dp" />
 
                 <TextView
                     android:text="TextView"
