--- a/GoTracker/app/src/main/res/layout/fragment_run.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_run.xml
@@ -11,7 +11,9 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:text="Activity : Running"
