--- a/GoTracker/app/src/main/res/layout/fragment_start.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_start.xml
@@ -84,11 +84,11 @@
                 <ImageView
                     android:layout_height="45dp"
                     android:src="@drawable/error"
-                    android:id="@+id/imageView"
+                    android:id="@+id/ivGps"
                     android:layout_width="75dp" />
 
                 <TextView
-                    android:text="TextView"
+                    android:text="GPS"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/tvGps"
@@ -104,12 +104,12 @@
 
                 <ImageView
                     android:src="@drawable/success"
-                    android:id="@+id/imageView2"
+                    android:id="@+id/ivStepdetector"
                     android:layout_width="75dp"
                     android:layout_height="45dp" />
 
                 <TextView
-                    android:text="TextView"
+                    android:text="Stepdetector"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/tvStepDetecter"
