--- a/GoTracker/app/src/main/res/layout/fragment_run.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_run.xml
@@ -59,7 +59,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnStopRun"
         android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:backgroundTint="?attr/actionModeSplitBackground" />
 
 </LinearLayout>
