--- a/GoTracker/app/src/main/res/layout/fragment_map.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_map.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="se.mah.af6260.gotracker.MapFrag">
+    tools:context="se.mah.af6260.gotracker.MapFrag"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <fragment
         android:name="com.google.android.gms.maps.MapFragment"
@@ -11,6 +13,7 @@
         android:layout_height="match_parent"
         tools:ignore="RtlHardcoded"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_weight="1.13" />
 
 </LinearLayout>
