--- a/GoTracker/app/src/main/res/layout/fragment_start.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_start.xml
@@ -26,7 +26,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/running"
+                android:src="@drawable/selectedrunning"
                 android:id="@+id/ivRun"
                 android:layout_weight="1" />
 
