CursorAdapter med bilder kopplad till calender som hämtar från databas.

--- a/GoTracker/app/src/main/res/layout/fragment_start.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_start.xml
@@ -40,7 +40,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/bicycle"
+                android:src="@drawable/bicycling"
                 android:id="@+id/ivBicycle"
                 android:layout_weight="1" />
 
