--- a/GoTracker/app/src/main/res/layout/fragment_start.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_start.xml
@@ -121,7 +121,7 @@
     </LinearLayout>
 
     <Button
-        android:text="Start run"
+        android:text="GO!"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnStartRun"
