--- a/GoTracker/app/src/main/res/layout/activity_main.xml
+++ b/GoTracker/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
-            android:id="@+id/tabStart" />
+            android:text="Map"
+            android:id="@+id/tabMap" />
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
@@ -33,8 +33,9 @@
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Map"
-            android:id="@+id/tabMap" />
+            android:text="Settings"
+            android:id="@+id/tabStart" />
+
     </android.support.design.widget.TabLayout>
 
     <FrameLayout
