IT WORKS DELETE

--- a/GoTracker/app/src/main/res/layout/fragment_session_detail.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_session_detail.xml
@@ -73,6 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sessionDelete"
-        android:backgroundTint="@android:color/holo_red_dark" />
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
