--- a/GoTracker/app/src/main/res/layout/fragment_session_detail.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_session_detail.xml
@@ -74,6 +74,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/sessionDelete"
         android:backgroundTint="@android:color/holo_red_dark"
+        android:background="@android:color/holo_red_dark"
         android:textColor="@android:color/white" />
 
 </LinearLayout>
