LATEST KNAPP AMAR FÄRG V2

--- a/GoTracker/app/src/main/res/layout/fragment_start.xml
+++ b/GoTracker/app/src/main/res/layout/fragment_start.xml
@@ -125,6 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnStartRun"
+        android:background="?attr/actionModeSplitBackground"
         android:backgroundTint="?attr/actionModeSplitBackground"
         android:layout_alignParentBottom="true"
         android:layout_weight="0.17"
